--- a/src/sass/layout/grid/media-queries/_desktop-small-992.scss
+++ b/src/sass/layout/grid/media-queries/_desktop-small-992.scss
@@ -6,6 +6,6 @@
 	@include generateDesktopSmallColumns;
 
 	.grid {
-		max-width: $desktopSmall;
+		width: $desktopSmall;
 	}
 }
