--- a/src/sass/layout/grid/media-queries/_tablet-768.scss
+++ b/src/sass/layout/grid/media-queries/_tablet-768.scss
@@ -6,7 +6,7 @@
 	@include generateStandardColumns;
 	@include generateTabletColumns;
 	.grid {
-		max-width: $tablets;
+		width: $tablets;
 	}
 	.row {
 		overflow: hidden;
